--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Jonathan Patton</title>
+    <title>Slice of my life</title>
     <link rel="stylesheet" href="./style.css"/>
 
 </head>
 <body>
-<img class="fit-picture"
-     src="about-jon-patton.jpg"
-alt="about Jon Patton"/>
-<p>Hi my name is Jonathan Patton I love to eat and camp.</p>
-<p> My Hobbies are Gaming and Cats.</p>
-<h1>Jonathan Patton</h1>
+
+
+<h1>Slice of Life</h1>
+<div>
+    <p>Hi my name is Jonathan Patton I love to eat anything and go camp.</p>
+    <p> My Hobbies are Gaming and Cats.</p>
+</div>
+<div>
+    <img src="about-jon-patton.jpg"
+         alt="about Jon Patton"
+         class="center-image"/>
+</div>
 
 </body>
 </html>
