added my version about jonathan

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
          alt="about Jon Patton"
          class="center-image"/>
 </div>
+<div>
+    <p>I assume Jonathan would try anything at least once.</p>
+
+    <p>Jonathan seems like the type to have every piece of equipment needed when he goes camping.</p>
+
+    <p>Gaming and cats seems like a mellow life.</p>
+
+    <p>Jonathes heading for this project makes me think he loves himself some pizza.</p>
+</div>
 
 </body>
 </html>
