added my version about jonathan

--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
     <p>I assume Jonathan would try anything at least once.</p>
 
     <p>Jonathan seems like the type to have every piece of equipment needed when he goes camping.</p>
+        <img src="FIre.webp"
+        alt="we love fire"
+        class="center-image"/>
 
     <p>Gaming and cats seems like a mellow life.</p>
+        <img src="Cat on twitch.jpeg"
+         alt="gotta love it"
+         class="center-image"/>
 
     <p>Jonathes heading for this project makes me think he loves himself some pizza.</p>
+        <img src="pizza.jpeg"
+         alt="pineapples"
+         class="center-image"/>
 </div>
 
 </body>
